@@ -1,32 +1,23 @@
 package twilightforest.client;
 
 import com.mojang.blaze3d.vertex.PoseStack;
-import io.github.fabricators_of_create.porting_lib.client_events.event.client.ModelEvents;
-import io.github.fabricators_of_create.porting_lib.event.client.*;
-import io.github.fabricators_of_create.porting_lib.event.client.CameraSetupCallback.CameraInfo;
-import net.fabricmc.api.EnvType;
-import net.fabricmc.api.Environment;
-import net.fabricmc.fabric.api.client.event.lifecycle.v1.ClientTickEvents;
-import net.fabricmc.fabric.api.client.item.v1.ItemTooltipCallback;
-import net.fabricmc.fabric.api.client.model.ModelLoadingRegistry;
-import net.fabricmc.fabric.api.client.rendering.v1.DimensionRenderingRegistry;
-import net.fabricmc.fabric.api.client.rendering.v1.WorldRenderContext;
-import net.fabricmc.fabric.api.client.rendering.v1.WorldRenderEvents;
-import net.fabricmc.loader.api.FabricLoader;
+import com.mojang.blaze3d.vertex.VertexConsumer;
 import net.minecraft.ChatFormatting;
 import net.minecraft.client.CameraType;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.Options;
-import net.minecraft.client.gui.screens.advancements.AdvancementsScreen;
 import net.minecraft.client.model.HeadedModel;
 import net.minecraft.client.model.HumanoidModel;
+import net.minecraft.client.player.LocalPlayer;
 import net.minecraft.client.renderer.DimensionSpecialEffects;
+import net.minecraft.client.renderer.RenderType;
 import net.minecraft.client.renderer.MultiBufferSource;
 import net.minecraft.client.renderer.entity.EntityRenderer;
 import net.minecraft.client.renderer.entity.LivingEntityRenderer;
 import net.minecraft.client.resources.model.BakedModel;
 import net.minecraft.client.resources.model.ModelBakery;
 import net.minecraft.client.resources.model.ModelResourceLocation;
+import net.minecraft.core.BlockPos;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.MutableComponent;
@@ -37,18 +28,35 @@ import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.EquipmentSlot;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.item.BlockItem;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.TooltipFlag;
 import net.minecraft.world.item.WrittenBookItem;
 import net.minecraft.world.level.ChunkPos;
 import net.minecraft.world.level.block.entity.BlockEntity;
+import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.level.chunk.ChunkStatus;
 import net.minecraft.world.phys.Vec3;
+import net.minecraft.world.phys.shapes.Shapes;
+import net.minecraft.world.phys.shapes.VoxelShape;
+import net.minecraftforge.api.distmarker.Dist;
+import net.minecraftforge.api.distmarker.OnlyIn;
+import net.minecraftforge.client.DimensionSpecialEffectsManager;
+import net.minecraftforge.client.event.*;
+import net.minecraftforge.client.gui.overlay.VanillaGuiOverlay;
+import net.minecraftforge.event.TickEvent;
+import net.minecraftforge.event.entity.player.ItemTooltipEvent;
+import net.minecraftforge.eventbus.api.SubscribeEvent;
+import net.minecraftforge.fml.ModList;
+import net.minecraftforge.fml.common.Mod;
 import twilightforest.TFConfig;
 import twilightforest.TwilightForestMod;
+import twilightforest.block.GiantBlock;
+import twilightforest.block.MiniatureStructureBlock;
 import twilightforest.block.entity.GrowingBeanstalkBlockEntity;
 import twilightforest.client.model.block.doors.CastleDoorModelLoader;
+import twilightforest.client.model.block.forcefield.ForceFieldModelLoader;
 import twilightforest.client.model.block.giantblock.GiantBlockModelLoader;
 import twilightforest.client.model.block.patch.PatchModelLoader;
 import twilightforest.client.renderer.TFSkyRenderer;
@@ -57,24 +65,27 @@ import twilightforest.client.renderer.entity.ShieldLayer;
 import twilightforest.compat.trinkets.TrinketsCompat;
 import twilightforest.data.tags.ItemTagGenerator;
 import twilightforest.events.HostileMountEvents;
+import twilightforest.fabric.models.TFModelLoadingPlugin;
 import twilightforest.init.TFItems;
 import twilightforest.item.*;
+import twilightforest.mixin.client.LevelRendererAccessor;
 import twilightforest.world.registration.TFGenerationSettings;
 
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.function.Consumer;
 
 @Environment(EnvType.CLIENT)
 public class TFClientEvents {
 
 	public static void init() {
-		ModBusEvents.registerModels();
-		ModBusEvents.registerLoaders();
+		TFItems.addItemModelProperties();
+		ModelLoadingPlugin.register(TFModelLoadingPlugin.INSTANCE);
 		MinecraftTailCallback.EVENT.register(ModBusEvents::registerDimEffects);
+		WorldRenderEvents.BEFORE_BLOCK_OUTLINE.register(TFClientEvents::unrenderMiniStructureHitbox);
+		WorldRenderEvents.AFTER_TRANSLUCENT.register(TFClientEvents::renderWeather);
 		WorldRenderEvents.LAST.register(TFClientEvents::renderWorldLast);
-		ModelEvents.MODIFY_BAKING_RESULT.register(ModBusEvents::modelBake);
 		RenderTickStartCallback.EVENT.register(TFClientEvents::renderTick);
 		ClientTickEvents.END_CLIENT_TICK.register(TFClientEvents::clientTick);
 		ItemTooltipCallback.EVENT.register(TFClientEvents::tooltipEvent);
@@ -82,35 +93,37 @@ public class TFClientEvents {
 		LivingEntityRenderEvents.PRE.register(TFClientEvents::unrenderHeadWithTrophies);
 		ItemTooltipCallback.EVENT.register(TFClientEvents::translateBookAuthor);
 		CameraSetupCallback.EVENT.register(TFClientEvents::camera);
+
 	}
 
 	public static class ModBusEvents {
-		public static void registerLoaders() {
-			ModelLoadingRegistry.INSTANCE.registerResourceProvider(manager -> PatchModelLoader.INSTANCE);
-			ModelLoadingRegistry.INSTANCE.registerResourceProvider(manager -> GiantBlockModelLoader.INSTANCE);
-			ModelLoadingRegistry.INSTANCE.registerResourceProvider(manager -> CastleDoorModelLoader.INSTANCE);
+		public static void registerLoaders(Consumer<ModelResolver> out) {
+			out.accept(PatchModelLoader.INSTANCE);
+			out.accept(GiantBlockModelLoader.INSTANCE);
+			out.accept(ForceFieldModelLoader.INSTANCE);
+			out.accept(CastleDoorModelLoader.INSTANCE);
 		}
 
 		public static void modelBake(Map<ResourceLocation, BakedModel> models, ModelBakery modelBakery) {
-			TFItems.addItemModelProperties();
+			// fabric: in init
+//			TFItems.addItemModelProperties();
 
-//			List<Map.Entry<ResourceLocation, BakedModel>> models =  bakedModels.entrySet().stream() Handled by ItemBlockRenderTypesMixin
-//					.filter(entry -> entry.getKey().getNamespace().equals(TwilightForestMod.ID) && entry.getKey().getPath().contains("leaves") && !entry.getKey().getPath().contains("dark")).collect(Collectors.toList());
+			// fabric: Handled by ItemBlockRenderTypesMixin
+//			List<Map.Entry<ResourceLocation, BakedModel>> models =  bakedModels.entrySet().stream()
+//					.filter(entry -> entry.getKey().getNamespace().equals(TwilightForestMod.ID) && entry.getKey().getPath().contains("leaves") && !entry.getKey().getPath().contains("dark")).toList();
 
 //			models.forEach(entry -> bakedModels.put(entry.getKey(), new BakedLeavesModel(entry.getValue())));
 		}
 
-		public static void registerModels() {
-			ModelLoadingRegistry.INSTANCE.registerModelProvider((manager, out) -> {
-				out.accept(ShieldLayer.LOC);
-				out.accept(new ModelResourceLocation(TwilightForestMod.prefix("trophy"), "inventory"));
-				out.accept(new ModelResourceLocation(TwilightForestMod.prefix("trophy_minor"), "inventory"));
-				out.accept(new ModelResourceLocation(TwilightForestMod.prefix("trophy_quest"), "inventory"));
+		public static void registerModels(Consumer<ResourceLocation> out) {
+			out.accept(ShieldLayer.LOC);
+			out.accept(new ModelResourceLocation(TwilightForestMod.prefix("trophy"), "inventory"));
+			out.accept(new ModelResourceLocation(TwilightForestMod.prefix("trophy_minor"), "inventory"));
+			out.accept(new ModelResourceLocation(TwilightForestMod.prefix("trophy_quest"), "inventory"));
 
-				out.accept(TwilightForestMod.prefix("block/casket_obsidian"));
-				out.accept(TwilightForestMod.prefix("block/casket_stone"));
-				out.accept(TwilightForestMod.prefix("block/casket_basalt"));
-			});
+			out.accept(TwilightForestMod.prefix("block/casket_obsidian"));
+			out.accept(TwilightForestMod.prefix("block/casket_stone"));
+			out.accept(TwilightForestMod.prefix("block/casket_basalt"));
 		}
 
 		public static void registerDimEffects(Minecraft client) {
@@ -156,7 +169,7 @@ public class TFClientEvents {
 					}
 				}
 			}
-//		}
+		}
 	}
 
 	/**
@@ -194,9 +207,7 @@ public class TFClientEvents {
 		Minecraft mc = Minecraft.getInstance();
 		float partial = mc.getFrameTime();
 
-		if (!mc.isPaused() ||
-				(mc.screen != null &&
-						mc.screen.getClass().equals(AdvancementsScreen.class))) {
+		if (!mc.isPaused()) {
 			time++;
 
 			rotationTickerI = (rotationTickerI >= 359 ? 0 : rotationTickerI + 1);
@@ -226,7 +237,7 @@ public class TFClientEvents {
 					if (mc.level.getChunk(pos.x, pos.z, ChunkStatus.FULL, false) != null) {
 						List<BlockEntity> beanstalksInChunk = mc.level.getChunk(pos.x, pos.z).getBlockEntities().values().stream()
 								.filter(blockEntity -> blockEntity instanceof GrowingBeanstalkBlockEntity beanstalkBlock && beanstalkBlock.isBeanstalkRumbling())
-								.collect(Collectors.toList());
+								.toList();
 						if (!beanstalksInChunk.isEmpty()) {
 							BlockEntity beanstalk = beanstalksInChunk.get(0);
 							Player player = mc.player;
@@ -256,9 +267,9 @@ public class TFClientEvents {
 		return false; // we just modify, don't cancel
 	}
 
-	private static final MutableComponent WIP_TEXT_0 = Component.translatable("twilightforest.misc.wip0").setStyle(Style.EMPTY.withColor(ChatFormatting.RED));
-	private static final MutableComponent WIP_TEXT_1 = Component.translatable("twilightforest.misc.wip1").setStyle(Style.EMPTY.withColor(ChatFormatting.RED));
-	private static final MutableComponent NYI_TEXT = Component.translatable("twilightforest.misc.nyi").setStyle(Style.EMPTY.withColor(ChatFormatting.RED));
+	private static final MutableComponent WIP_TEXT_0 = Component.translatable("misc.twilightforest.wip0").setStyle(Style.EMPTY.withColor(ChatFormatting.RED));
+	private static final MutableComponent WIP_TEXT_1 = Component.translatable("misc.twilightforest.wip1").setStyle(Style.EMPTY.withColor(ChatFormatting.RED));
+	private static final MutableComponent NYI_TEXT = Component.translatable("misc.twilightforest.nyi").setStyle(Style.EMPTY.withColor(ChatFormatting.RED));
 
 	public static void tooltipEvent(ItemStack item, TooltipFlag context, List<Component> lines) {
 		if (!item.is(ItemTagGenerator.WIP) && !item.is(ItemTagGenerator.NYI)) return;
@@ -313,11 +324,50 @@ public class TFClientEvents {
 				List<Component> components = lines;
 				for (Component component : components) {
 					if (component.toString().contains("book.byAuthor")) {
-						components.set(components.indexOf(component), (Component.translatable("book.byAuthor")
-								.append(Component.translatable(TwilightForestMod.ID + ".book.author"))).withStyle(component.getStyle()));
+						components.set(components.indexOf(component), (Component.translatable("book.byAuthor", Component.translatable(TwilightForestMod.ID + ".book.author"))).withStyle(component.getStyle()));
 					}
 				}
 			}
 		}
+	}
+
+	@SubscribeEvent
+	public static void onRenderBlockHighlightEvent(RenderHighlightEvent.Block event) {
+		BlockPos pos = event.getTarget().getBlockPos();
+		BlockState state = event.getCamera().getEntity().level().getBlockState(pos);
+
+		if (state.getBlock() instanceof MiniatureStructureBlock) {
+			event.setCanceled(true);
+			return;
+		}
+
+		LocalPlayer player = Minecraft.getInstance().player;
+		if (player != null && (player.getMainHandItem().getItem() instanceof GiantPickItem || (player.getMainHandItem().getItem() instanceof BlockItem blockItem && blockItem.getBlock() instanceof GiantBlock))) {
+			event.setCanceled(true);
+			if (!state.isAir() && player.level().getWorldBorder().isWithinBounds(pos)) {
+				BlockPos offsetPos = new BlockPos(pos.getX() & ~0b11, pos.getY() & ~0b11, pos.getZ() & ~0b11);
+				renderGiantHitOutline(event.getPoseStack(), event.getMultiBufferSource().getBuffer(RenderType.lines()), event.getCamera().getPosition(), offsetPos);
+			}
+		}
+	}
+
+	private static final VoxelShape GIANT_BLOCK = Shapes.box(0.0D, 0.0D, 0.0D, 4.0D, 4.0D, 4.0D);
+
+	private static void renderGiantHitOutline(PoseStack poseStack, VertexConsumer consumer, Vec3 cam, BlockPos pos) {
+		PoseStack.Pose last = poseStack.last();
+		float posX = pos.getX() - (float)cam.x();
+		float posY = pos.getY() - (float)cam.y();
+		float posZ = pos.getZ() - (float)cam.z();
+		GIANT_BLOCK.forAllEdges((x, y, z, x1, y1, z1) -> {
+			float xSize = (float)(x1 - x);
+			float ySize = (float)(y1 - y);
+			float zSize = (float)(z1 - z);
+			float sqrt = Mth.sqrt(xSize * xSize + ySize * ySize + zSize * zSize);
+			xSize /= sqrt;
+			ySize /= sqrt;
+			zSize /= sqrt;
+			consumer.vertex(last.pose(), (float)(x + posX), (float)(y + posY), (float)(z + posZ)).color(0.0F, 0.0F, 0.0F, 0.45F).normal(last.normal(), xSize, ySize, zSize).endVertex();
+			consumer.vertex(last.pose(), (float)(x1 + posX), (float)(y1 + posY), (float)(z1 + posZ)).color(0.0F, 0.0F, 0.0F, 0.45F).normal(last.normal(), xSize, ySize, zSize).endVertex();
+		});
 	}
 }
